--- a/index.html
+++ b/index.html
@@ -163,17 +163,17 @@
             <button class="navbar-link" data-nav-link>Publications</button>
           </li>
 
-          <!-- <li class="navbar-item">
+          <li class="navbar-item">
             <button class="navbar-link" data-nav-link>CV</button>
-          </li> -->
+          </li>
 
           <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
           </li> -->
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
-          </li>
+          </li> -->
 
         </ul>
 
@@ -936,117 +936,194 @@
         - #CV
       -->
 
-      <article class="CV" data-page="CV">
+     <article class="CV" data-page="CV">
+ <header>
+<h2 class="h2 article-title">CV</h2>
+</header>
 
-        <header>
-          <h2 class="h2 article-title">CV</h2>
-        </header>
+<section class="timeline">
+<div class="title-wrapper">
+<div class="icon-box">
+<ion-icon name="book-outline"></ion-icon>
+</div>
+<h3 class="h3">Education</h3>
+</div>
+<ol class="timeline-list">
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">PhD in Cognitive Science (ongoing)</h4>
+<span>2021 — present</span>
+<p class="timeline-text">
+ University of Osnabrück & Max Planck Institute CBS. Investigating neural mechanisms of visual attention and exploration using MEG, eye-tracking, and computational modeling. Leading the Active Visual Semantics Dataset project.
+</p>
+<p class="supervisor">Supervisors: Tim Kietzmann, Peter König, Martin Hebart (Leipzig)</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Master of Science Psychology</h4>
+<span>2017 — 2020</span>
+<p class="timeline-text">
+ University of Göttingen. Focus: Cognitive Neuroscience. Thesis: "Tracing the individual variability of visual object representations through time and space" (Grade: 1.0, with distinction).
+</p>
+<p class="supervisor">Supervisors: Tim Kietzmann (Donders Institute), Christian Valuch (Göttingen)</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Bachelor of Science Psychology</h4>
+<span>2014 — 2017</span>
+<p class="timeline-text">
+ University of Osnabrück. Thesis: "Measuring Realities: An EEG study using a Virtual Reality Memory Paradigm" (Grade: 0.7, with distinction).
+</p>
+<p class="supervisor">Supervisor: Thomas Gruber</p>
+</li>
+</ol>
+</section>
 
-        <section class="timeline">
+<section class="timeline">
+<div class="title-wrapper">
+<div class="icon-box">
+<ion-icon name="briefcase-outline"></ion-icon>
+</div>
+<h3 class="h3">Research Experience</h3>
+</div>
+<ol class="timeline-list">
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">PhD Student & Researcher</h4>
+<span>2021 — Present</span>
+<p class="timeline-text">
+ University of Osnabrück & Max Planck Institute CBS. Neural mechanisms of visual attention and exploration using MEG, eye-tracking, and computational modeling. Leading the Active Visual Semantics Dataset project.
+</p>
+<p class="supervisor">Kietzmann Lab • Supervisors: Tim Kietzmann, Peter König, Martin Hebart</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Master Thesis Research</h4>
+<span>Nov 2019 — Nov 2020</span>
+<p class="timeline-text">
+ Artificial Cognitive Systems Lab, Donders Institute Nijmegen. Investigating interindividual spatiotemporal variability in neural representations during visual object recognition using time-resolved representational similarity analysis.
+</p>
+<p class="supervisor">Supervisor: Dr. Tim Kietzmann</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Research Intern</h4>
+<span>Sep 2018 — Apr 2019</span>
+<p class="timeline-text">
+ Brain and Consciousness Lab, École Normale Supérieure Paris. Study of attention, metacognition and perceptual decision making using Brain-Computer-Interfaces (BCI). Investigated neurofeedback-induced choice blindness and the integration of metacognitive and external cues.
+</p>
+<p class="supervisor">Supervisor: Prof. Sid Kouider</p>
+</li>
+</ol>
+</section>
 
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
+<section class="timeline">
+<div class="title-wrapper">
+<div class="icon-box">
+<ion-icon name="school-outline"></ion-icon>
+</div>
+<h3 class="h3">Teaching Experience</h3>
+</div>
+<ol class="timeline-list">
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">The eyes have it - Active vision as a window to mind & brain</h4>
+<span>Summer 2025</span>
+<p class="timeline-text">
+ Cognitive Science Programme, University of Osnabrück. Course on eye movements, and their role in understanding cognitive processes and brain function.
+</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Projects at the intersection of neuroscience and machine learning</h4>
+<span>Summer 2024, Winter 2024/25, Summer 2025</span>
+<p class="timeline-text">
+ Cognitive Science Programme, University of Osnabrück. Project-based course combining neuroscience and machine learning approaches to understand brain function.
+</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Machine Learning for Cognitive Computational Neuroscience</h4>
+<span>Winter 2022/2023, Winter 2024/2025</span>
+<p class="timeline-text">
+ Cognitive Science Programme, University of Osnabrück. Graduate-level course covering machine learning applications in computational neuroscience, including neural network architectures and data analysis methods.
+</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Research Project Supervision</h4>
+<span>Winter 2019/2020</span>
+<p class="timeline-text">
+ University of Göttingen. Graduate teaching assistance for undergraduate research projects. Content: experimental design, programming of psychophysical experiments, data analysis and presentation.
+</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Perception, Emotion and Cognition</h4>
+<span>Summer 2019</span>
+<p class="timeline-text">
+ University of Göttingen. Graduate teaching assistance for introductory course in experimental psychology, covering fundamental principles of perception and cognition.
+</p>
+</li>
+</ol>
+</section>
 
-            <h3 class="h3">Education</h3>
-          </div>
+<section class="timeline">
+<div class="title-wrapper">
+<div class="icon-box">
+<ion-icon name="people-outline"></ion-icon>
+</div>
+<h3 class="h3">Student Supervision</h3>
+</div>
+<ol class="timeline-list">
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Master Thesis Supervision</h4>
+<span>2021 — 2024</span>
+<p class="timeline-text">
+ Supervised master's theses: Pieter Barkema (2021), Carmen Amme (2023), Thomas Nortmann (2024)
+</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Bachelor Thesis Supervision</h4>
+<span>2021 — 2024</span>
+<p class="timeline-text">
+ Supervised bachelor's theses: Julia Schäfers (2021), Max Wassermann (2023), Mathilda Buschmann (2024), Nina Thornton (2024)
+</p>
+</li>
+</ol>
+</section>
 
-          <ol class="timeline-list">
+<section class="timeline">
+<div class="title-wrapper">
+<div class="icon-box">
+<ion-icon name="trophy-outline"></ion-icon>
+</div>
+<h3 class="h3">Awards & Scholarships</h3>
+</div>
+<ol class="timeline-list">
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Max-Planck School for Cognition</h4>
+<span>2023</span>
+<p class="timeline-text">
+ Associate Doctorate Fellowship (full position)
+</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Studienstiftung des deutschen Volkes</h4>
+<span>2021 — 2023</span>
+<p class="timeline-text">
+ PhD scholarship from the German Academic Scholarship Foundation
+</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Ingeborg- und Dr. H. Jürgen Tiemann-Mobilitätsstipendium</h4>
+<span>2022</span>
+<p class="timeline-text">
+ Research mobility grant for MEG study at Max Planck Institute Leipzig
+</p>
+</li>
+<li class="timeline-item">
+<h4 class="h4 timeline-item-title">Hans-Böckler-Stiftung Scholarship</h4>
+<span>2015 — 2020</span>
+<p class="timeline-text">
+ Full scholarship for psychology studies including travel grants for international research
+</p>
+</li>
+</ol>
+</section>
 
-            <li class="timeline-item">
+</article>
 
-              <h4 class="h4 timeline-item-title">PhD in Cognitive Science (ongoing)</h4>
-
-              <span>2021 — present</span>
-
-              <p class="timeline-text">
-                University of Osnabrück & Max Planck Institute CBS. Investigating neural mechanisms of visual attention and exploration using MEG, eye-tracking, and computational modeling.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Master of Science Psychology</h4>
-
-              <span>2017 — 2020</span>
-
-              <p class="timeline-text">
-                University of Göttingen. Focus: Cognitive Neuroscience. Thesis: "Tracing the individual variability of visual object representations through time and space" (Grade: 1.0, with distinction).
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Bachelor of Science Psychology</h4>
-
-              <span>2014 — 2017</span>
-
-              <p class="timeline-text">
-                University of Osnabrück. Thesis: "Measuring Realities: An EEG study using a Virtual Reality Memory Paradigm" (Grade: 0.7, with distinction).
-              </p>
-
-            </li>
-
-          </ol>
-
-        </section>
-
-        <section class="timeline">
-
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">Experience</h3>
-          </div>
-
-          <ol class="timeline-list">
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">PhD Student & Researcher</h4>
-
-              <span>2021 — Present</span>
-
-              <p class="timeline-text">
-                University of Osnabrück & Max Planck Institute CBS. Leading the Active Visual Semantics Dataset project, investigating neural mechanisms of visual attention using MEG and eye-tracking.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Master Thesis Research</h4>
-
-              <span>2019 — 2020</span>
-
-              <p class="timeline-text">
-                Donders Institute Nijmegen. Investigating interindividual spatiotemporal variability in neural representations during visual object recognition using time-resolved RSA.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Research Intern</h4>
-
-              <span>2018 — 2019</span>
-
-              <p class="timeline-text">
-                Brain and Consciousness Lab, École Normale Supérieure Paris. Study of attention, metacognition and perceptual decision making using Brain-Computer-Interfaces.
-              </p>
-
-            </li>
-
-          </ol>
-
-        </section>
-
-        <section class="skill">
+        <!-- <section class="skill">
 
           <h3 class="h3 skills-title">My skills</h3>
 
@@ -1106,7 +1183,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
       </article>
 
