added why we linger

--- a/index.html
+++ b/index.html
@@ -668,6 +668,18 @@
           </div>
 
           <ol class="timeline-list">
+           
+             <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Why we linger: Memory encoding, rather than visual processing demand, drives fixation timing on natural scenes - evidence from a large-scale MEG dataset</h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+                <strong>Sulewski, P., Amme, C., Hebart, M. N., König, P., & Kietzmann, T. C.</strong><br>
+                <em>bioRxiv</em>. <a href="https://doi.org/10.21203/rs.3.rs-7029247/v1" target="_blank">https://doi.org/10.21203/rs.3.rs-7029247/v1</a>
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
