research square fix

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 
               <p class="timeline-text">
                 <strong>Sulewski, P., Amme, C., Hebart, M. N., König, P., & Kietzmann, T. C.</strong><br>
-                <em>bioRxiv</em>. <a href="https://doi.org/10.21203/rs.3.rs-7029247/v1" target="_blank">https://doi.org/10.21203/rs.3.rs-7029247/v1</a>
+                <em>ResearchSquare</em>. <a href="https://doi.org/10.21203/rs.3.rs-7029247/v1" target="_blank">https://doi.org/10.21203/rs.3.rs-7029247/v1</a>
               </p>
 
             </li>
